--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Run Accuracy Test
       run: |
-        export PYTHONPATH="$(pwd)/docs-assistant-bot:$PYTHONPATH"
+        export PYTHONPATH="$(pwd):$PYTHONPATH"
         set -eo pipefail
         python3.11 tests/test_accuracy.pys
       env:
